# Ziggo-Device

./: LICENSE.txt  README.md
Hardware/: .gitattributes  .gitignore  README.md  gen_reg_mapping.txt  init_os.sh  tsn_device.tcl  update.bat  update.sh
Hardware/BD/zynq_ps_i/: zynq_ps_i.bd  zynq_ps_i.bxml  zynq_ps_i_ooc.xdc
Hardware/Constraints/: tns_tsn_device.xdc
Hardware/Ex/: device_1000M.bit  device_1000M.xsa  device_1000M_background.bit  ps7_init.c  ps7_init.h  ps7_init.html  ps7_init.tcl  ps7_init_gpl.c  ps7_init_gpl.h  tns_tsn_device.bit  tns_tsn_device.tcl  tns_tsn_device.xsa
Hardware/HDL/: axi_packet_generator.v  axis_it_checker.v  pulse_generator.v  tns_tsn_device.v  tx_selection.v
Hardware/HDL/hw_timestamp/: rtc_mini.v
Hardware/HDL/time_sync/: rgs.v  rtc.v  time_sync_hw.v  time_sync_hw_axi_sm.v  time_sync_hw_axi_sm_1.v  time_sync_hw_axi_sm_2.v
Hardware/HDL/trimode_mac/: simple_mac.v  simple_mac_no_shared.v  simple_mac_no_shared_int.v  tri_mode_ethernet_mac_0_axi_lite_sm.v  tri_mode_ethernet_mac_0_bram_tdp.v  tri_mode_ethernet_mac_0_example_design_resets.v  tri_mode_ethernet_mac_0_reset_sync.v  (+4 more)
Hardware/IP_repo/: .gitignore
Hardware/Python/: gen_code.py  gen_code_define.py
Hardware/Testbenches/: axi_packet_generator_tb.v  axis_it_checker_tb.v  packet_generator.v  pulse_generator_tb.v  rtc_mini_tb.v  rtc_tb.v  tsu_axis_rx_tb.v  tsu_axis_rx_tb_ptp.v  tsu_axis_tb_behav.wcfg  tsu_axis_tx_tb.v  tsu_axis_tx_tb_ptp.v  tx_selection_tb.v
Software/: .gitignore  CMakeLists.txt  README.md  analyze_packet.py  config.h  pkt_gen_main.c  pkt_gen_main.cpp  time_sync_main.c
Software/config/: a380-config.json  a380-schedule.json  d2s0-config.json  d2s0-schedule.json  ring3-config.json  ring3-schedule.json
Software/dma_proxy/: buffer_queue.c  buffer_queue.h  dma-proxy.c  dma-proxy.h
Software/log/: log.c  log.h
Software/pkt_gen_control/: pkt_gen.c  pkt_gen.h
Software/time_sync/: clock_master_sync_receive_sm.c  clock_master_sync_receive_sm.h  clock_master_sync_send_sm.c  clock_master_sync_send_sm.h  clock_slave_sync_sm.c  clock_slave_sync_sm.h  eth_frame.c  eth_frame.h  gcl.h  gpio_reset.h  md_pdelay_req_sm.c  md_pdelay_req_sm.h  md_pdelay_resp_sm.c  md_pdelay_resp_sm.h  md_sync_receive_sm.c  md_sync_receive_sm.h  md_sync_send_sm.c  md_sync_send_sm.h  msg_frame.c  msg_frame.h  port_sync_sync_receive_sm.c  port_sync_sync_receive_sm.h  port_sync_sync_send_sm.c  port_sync_sync_send_sm.h  ptp_types.h  rtc.h  site_sync_sync_sm.c  site_sync_sync_sm.h  state_machines.h  tsu.h  uio.h  vscode.h
Software/tsn_drivers/: .gitignore  README.md  compile.sh  gcl.c  gcl.h  gpio_reset.c  gpio_reset.h  ptp_types.c  ptp_types.h  rtc.c  rtc.h  switch_rules.c  switch_rules.h  tagger.c  tagger.h  time_sync_main_loop.c  tsu.c  tsu.h  uio.c  uio.h
docs/: basic_knowledge.md  cnc-manual.md  contributing.md  getting-started.md  hardware-build.md  required.md  software-build.md  system-design.md  testbed.md  tsnperf.md
testbed-build/: batch.mjs  readme.md  requirements.txt  send.py
testbed-build/accuracy/: d3s2-baseline-1t-config.json  d3s2-baseline-1t-schedule.json
testbed-build/bandwidth/: d3s2-baseline-50%t-schedule.json
testbed-build/gate/: d3s2-baseline-3t-schedule.json
(+389 files in other folders)
